// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`A suite of tests for Fit Component renders correctly Fit Display Component as "Runs Large 1`] = `
<div
  className="sc-jSFkmK lnDnEi"
>
  <div
    className="sc-gtssRu dWODPw"
  >
    <div
      className="sc-dlnjPT iEAyWe"
    />
    <span
      className="sc-gKAblj dJFrAv"
    />
  </div>
  <span
    className="sc-hKFyIo fNFVfG"
  >
    Runs Small
  </span>
  <span
    className="sc-eCApGN dNfuhr"
  >
    Runs Large
  </span>
</div>
`;

exports[`A suite of tests for Fit Component renders correctly Fit Display Component as "Runs Small 1`] = `
<div
  className="sc-jSFkmK lnDnEi"
>
  <div
    className="sc-gtssRu dWODPw"
  >
    <div
      className="sc-dlnjPT eUUHfX"
    />
    <span
      className="sc-gKAblj dJFrAv"
    />
  </div>
  <span
    className="sc-hKFyIo fNFVfG"
  >
    Runs Small
  </span>
  <span
    className="sc-eCApGN dNfuhr"
  >
    Runs Large
  </span>
</div>
`;

exports[`A suite of tests for Fit Component renders correctly Fit Display Component as "True Fit 1`] = `
<div
  className="sc-jSFkmK lnDnEi"
>
  <div
    className="sc-gtssRu dWODPw"
  >
    <div
      className="sc-dlnjPT dUUXmW"
    />
    <span
      className="sc-gKAblj dJFrAv"
    />
  </div>
  <span
    className="sc-hKFyIo fNFVfG"
  >
    Runs Small
  </span>
  <span
    className="sc-eCApGN dNfuhr"
  >
    Runs Large
  </span>
</div>
`;

exports[`A suite of tests for Helpful Component renders correctly Helpful Button Component 1`] = `
<div>
  Helpful?
  <button
    className="sc-iCoHVE bvCgNS"
    data-testid="yesButton"
    onClick={[Function]}
    value={1}
  >
    Yes ·
     
    1
  </button>
  <button
    className="sc-iCoHVE bvCgNS"
    data-testid="noButton"
    onClick={[Function]}
    value={2}
  >
    No ·
     
    2
  </button>
  <button
    className="sc-iCoHVE bvCgNS"
  >
    Report as inappropriate
  </button>
</div>
`;

exports[`A suite of tests for ImgModal Component does not renders ImgModal Component 1`] = `null`;

exports[`A suite of tests for ImgModal Component renders correctly ImgModal Component 1`] = `
<div
  className="sc-kLokih ibCanN"
>
  <button
    className="sc-gXfWUo hkMISl"
    onClick={[Function]}
  >
    X
  </button>
  <div
    className="sc-iklIKw fulWdc"
  >
    <img
      className="sc-jJMGHv fFYxBt"
    />
    <h3
      className="sc-hiKfjK gEvJoG"
    >
      The Greekest
    </h3>
  </div>
</div>
`;

exports[`A suite of tests for Load More Component renders correctly Load More Button Component 1`] = `
<button
  className="sc-ksluoS djYkNW"
  onClick={[Function]}
>
  Load More
</button>
`;

exports[`A suite of tests for Review Display Component renders correctly Review Display Component 1`] = `
<section
  className="sc-fujyUd bPgFlh"
>
  <div
    className="sc-pNWxx glRlCA"
  >
    <p>
      <b>
        theGreekest
      </b>
    </p>
    <p>
      New York
    </p>
  </div>
  <div
    className="sc-jrsJCI iOXdGf"
  >
    <span
      className="sc-bqGHjH gBkTZR"
    >
      <div
        className="sc-bdnylx ddxNlS"
      />
      3 years ago
    </span>
    <h3
      className="sc-crzoUp ljATUS"
    >
      The Greeks Strike Again
    </h3>
    <p>
      GreekGreekGreekGreekGreekGreekGreekGreekGreekGreekGreekGreekGreekGreekGreekGreekGreek
    </p>
    <p>
      <b>
        Height 
      </b>
      Shorter than 5'
    </p>
    <p>
      <b>
        Weight 
      </b>
      375 - 400 lbs
    </p>
    <p>
      <b>
        Age 
      </b>
      18 to 24
    </p>
    <p>
      <b>
        Primary Usage 
      </b>
      <span
        className="sc-bqGHjH gBkTZR"
      >
        Shirt 
        Pratical 
        #streetWear 
      </span>
    </p>
    <img
      className="sc-iqAbSa jqYKGB"
      onClick={[Function]}
    />
    <div>
      Helpful?
      <button
        className="sc-iCoHVE bvCgNS"
        data-testid="yesButton"
        onClick={[Function]}
        value={1}
      >
        Yes ·
         
        1
      </button>
      <button
        className="sc-iCoHVE bvCgNS"
        data-testid="noButton"
        onClick={[Function]}
        value={2}
      >
        No ·
         
        2
      </button>
      <button
        className="sc-iCoHVE bvCgNS"
      >
        Report as inappropriate
      </button>
    </div>
  </div>
  <div
    className="sc-kEqYlL hWtfSf"
  >
    <h2
      className="sc-dIsAE gEkXsQ"
    >
      Overall Fit Rating
    </h2>
    <div
      className="sc-jSFkmK lnDnEi"
    >
      <div
        className="sc-gtssRu dWODPw"
      >
        <div
          className="sc-dlnjPT dUUXmW"
        />
        <span
          className="sc-gKAblj dJFrAv"
        />
      </div>
      <span
        className="sc-hKFyIo fNFVfG"
      >
        Runs Small
      </span>
      <span
        className="sc-eCApGN dNfuhr"
      >
        Runs Large
      </span>
    </div>
  </div>
</section>
`;

exports[`A suite of tests for Review Stats Container Component renders correctly Review Display Component 1`] = `
<div
  className="sc-giAqnE igbTra"
>
  <h1
    className="sc-ezzayL gJDqIQ"
  >
    Reviews
  </h1>
  <button
    className="sc-bYwzba cCGNpU"
    onClick={[Function]}
  >
    Write a review
  </button>
  <section
    className="sc-bCwgka booarE"
  >
    <div
      className="sc-dlMBXb gabvLs"
    >
      <table
        className="sc-iwaifL kywOwR"
      >
        <thead>
          <tr>
            <td>
              Rating Snapshot
            </td>
          </tr>
          <tr>
            <td>
              Select a row below to filter reviews.
            </td>
          </tr>
          <tr>
            <td
              className="sc-iJCRLp cBIuiF"
            >
              5 ★
              <div
                className="sc-kfYqjs igEuCT"
                onClick={[Function]}
              >
                <div
                  className="sc-fKgIGh eeeCjv"
                />
              </div>
              4
            </td>
          </tr>
          <tr>
            <td
              className="sc-iJCRLp cBIuiF"
            >
              4 ★
              <div
                className="sc-kfYqjs igEuCT"
                onClick={[Function]}
              >
                <div
                  className="sc-fKgIGh fQxxPX"
                />
              </div>
              5
            </td>
          </tr>
          <tr>
            <td
              className="sc-iJCRLp cBIuiF"
            >
              3 ★
              <div
                className="sc-kfYqjs igEuCT"
                onClick={[Function]}
              >
                <div
                  className="sc-fKgIGh kELwhx"
                />
              </div>
              2
            </td>
          </tr>
          <tr>
            <td
              className="sc-iJCRLp cBIuiF"
            >
              2 ★
              <div
                className="sc-kfYqjs igEuCT"
                onClick={[Function]}
              >
                <div
                  className="sc-fKgIGh exikfv"
                />
              </div>
              3
            </td>
          </tr>
          <tr>
            <td
              className="sc-iJCRLp cBIuiF"
            >
              1 ★
              <div
                className="sc-kfYqjs igEuCT"
                onClick={[Function]}
              >
                <div
                  className="sc-fKgIGh jsbgTq"
                />
              </div>
              1
            </td>
          </tr>
        </thead>
      </table>
    </div>
    <div
      className="sc-hHEjAm bXHEUy"
    >
      <table
        className="sc-iwaifL kywOwR"
      >
        <caption>
          Average Customer Ratings
        </caption>
        <thead>
          <tr>
            <td>
              Overall
            </td>
            <td
              className="sc-cxNIbT lbEgEG"
            >
              <div
                className="sc-bdnylx dHfqiF"
              />
            </td>
            <td
              className="sc-cxNIbT lbEgEG"
            >
              4.8
            </td>
          </tr>
          <tr>
            <td
              className="sc-lmgQde cPrNCv"
            >
              Overall Fit Rating
            </td>
            <td
              className="sc-cxNIbT lbEgEG"
            >
              <div
                className="sc-jSFkmK lnDnEi"
              >
                <div
                  className="sc-gtssRu dWODPw"
                >
                  <div
                    className="sc-dlnjPT dfYhMK"
                  />
                  <span
                    className="sc-gKAblj dJFrAv"
                  />
                </div>
                <span
                  className="sc-hKFyIo fNFVfG"
                >
                  Runs Small
                </span>
                <span
                  className="sc-eCApGN dNfuhr"
                >
                  Runs Large
                </span>
              </div>
            </td>
          </tr>
        </thead>
      </table>
    </div>
    <div
      className="sc-dIvqjp fEBpLv"
    >
      <p
        className="sc-bkbjAj kHLutn"
      >
        1–
        5
         
        of
         
        15
         
        Reviews
      </p>
    </div>
    <div
      className="sc-iemXMA iPyMCC"
    >
      <div
        className="sc-fnVYJo iUPTYC"
        data-testid="dropDown"
      >
        Sort By:
         
        Most Recent
         
        ▼
        <div
          className="sc-hBMVcZ cGajHf"
          data-testid="content"
        >
          <div
            className="sc-fFSRdu fmPRGV"
            data-testid="relevant"
            onClick={[Function]}
          >
            Most Relevant
          </div>
          <div
            className="sc-fFSRdu fmPRGV"
            data-testid="helpful"
            onClick={[Function]}
          >
            Most Helpful
          </div>
          <div
            className="sc-fFSRdu fmPRGV"
            data-testid="high"
            onClick={[Function]}
          >
            Highest to Lowest Rating
          </div>
          <div
            className="sc-fFSRdu fmPRGV"
            data-testid="low"
            onClick={[Function]}
          >
            Lowest to Highest Rating
          </div>
          <div
            className="sc-fFSRdu fmPRGV"
            data-testid="recent"
            onClick={[Function]}
          >
            Most Recent
          </div>
        </div>
      </div>
    </div>
  </section>
</div>
`;

exports[`A suite of tests for ReviewModal Component it does nopt renders Reviews Services 1`] = `null`;

exports[`A suite of tests for ReviewModal Component renders Reviews Services correctly 1`] = `
<div
  className="sc-cTJmaU mSJyO"
>
  <button
    className="sc-hTRkEk kyPRJy"
    onClick={[Function]}
  >
    X
  </button>
  <div
    className="sc-ArjOu hdbCCN"
  >
    <img
      className="sc-khIgXV goQMie"
    />
    The Greekest
  </div>
  <div
    className="sc-bBjRzc hoRang"
  >
    <form
      onSubmit={[Function]}
    >
      <h2
        className="sc-iTVIwl ezVRTm"
      >
        My Review for REI Co-op Men's Sahara Plaid Long-Sleeve Shirt
      </h2>
      <div
        className="sc-dPaNSN edomnw"
      >
        <label
          htmlFor="Product Rating"
        >
          <label
            className="sc-iBzFoy fJZDPC"
          >
            Product rating*
          </label>
          <input
            name="rating"
            type="radio"
            value={1}
          />
          <input
            name="rating"
            type="radio"
            value={2}
          />
          <input
            name="rating"
            type="radio"
            value={3}
          />
          <input
            name="rating"
            type="radio"
            value={4}
          />
          <input
            name="rating"
            type="radio"
            value={5}
          />
        </label>
      </div>
      <div
        className="sc-dPaNSN edomnw"
      >
        <h3
          className="sc-efHXLn kBakUh"
        >
          Review title*
        </h3>
        <input
          name="title"
          placeholder="Example: Great on trails!"
          type="text"
        />
      </div>
      <div
        className="sc-dPaNSN edomnw"
      >
        <h3
          className="sc-efHXLn kBakUh"
        >
          Review*
        </h3>
        <div
          className="sc-ciSmjq kdyKth"
        >
          <textarea
            className="sc-jNnnWF gynoKo"
            name="body"
            placeholder="Please keep your review focused on the product and your experience with it. Your review is so important for improving REI and the experience for other REI shoppers!"
            type="text"
          />
          <div
            className="sc-cBoprd gLlmmu"
          >
            <button>
              Image
            </button>
            <button>
              Video
            </button>
          </div>
        </div>
      </div>
      <div
        className="sc-dPaNSN edomnw"
      >
        <label
          className="sc-iBzFoy fJZDPC"
        >
          Would you recommend this product to a friend?
        </label>
        <input
          name="recc"
          type="radio"
          value="yes"
        />
        <input
          name="recc"
          type="radio"
          value="no"
        />
      </div>
      <div
        className="sc-dPaNSN edomnw"
      >
        <label
          className="sc-iBzFoy fJZDPC"
        >
          Overall Fit
        </label>
        <input
          name="fit"
          type="radio"
          value={0}
        />
        <input
          name="fit"
          type="radio"
          value={0.5}
        />
        <input
          name="fit"
          type="radio"
          value={1}
        />
      </div>
      <div
        className="sc-dPaNSN edomnw"
      >
        <label
          className="sc-iBzFoy fJZDPC"
        >
          Best for:
        </label>
        <input
          name="tag"
          type="radio"
          value="Shirt"
        />
        <input
          name="tag"
          type="radio"
          value="Pratical"
        />
        <input
          name="tag"
          type="radio"
          value="#streetWear"
        />
        <input
          name="tag"
          type="radio"
          value="JinSwagg"
        />
        <input
          name="tag"
          type="radio"
          value="Snoop"
        />
      </div>
      <div
        className="sc-dPaNSN edomnw"
      >
        <label
          className="sc-iBzFoy fJZDPC"
        >
          Height
        </label>
        <select
          className="sc-carGAA cPNaEG"
          name="height"
        >
          <option
            disabled={true}
            hidden={true}
            selected={true}
          >
            Select
          </option>
          <option
            value="Shorter than 5'"
          >
            Shorter than 5'
          </option>
          <option
            value="5'1\\""
          >
            5'1"
          </option>
          <option
            value="5'2\\""
          >
            5'2"
          </option>
          <option
            value="5'3\\""
          >
            5'3"
          </option>
          <option
            value="5'4\\""
          >
            5'4"
          </option>
          <option
            value="5'5\\""
          >
            5'5"
          </option>
          <option
            value="5'6\\""
          >
            5'6"
          </option>
          <option
            value="5'7\\""
          >
            5'7"
          </option>
          <option
            value="5'8\\""
          >
            5'8"
          </option>
          <option
            value="5'9\\""
          >
            5'9"
          </option>
          <option
            value="5'10\\""
          >
            5'10"
          </option>
          <option
            value="5'11\\""
          >
            5'11"
          </option>
          <option
            value="6'1\\""
          >
            6'1"
          </option>
          <option
            value="6'2\\""
          >
            6'2"
          </option>
          <option
            value="6'3\\""
          >
            6'3"
          </option>
          <option
            value="6'4\\""
          >
            6'4"
          </option>
          <option
            value="6'5\\""
          >
            6'5"
          </option>
          <option
            value="Taller than 6'5\\""
          >
            Taller than 6'5"
          </option>
        </select>
      </div>
      <div
        className="sc-dPaNSN edomnw"
      >
        <label
          className="sc-iBzFoy fJZDPC"
        >
          Weight Range
        </label>
        <select
          className="sc-carGAA cPNaEG"
          name="weight"
        >
          <option
            disabled={true}
            hidden={true}
            selected={true}
          >
            Select
          </option>
          <option
            value="Less than 100 lbs"
          >
            Less than 100 lbs
          </option>
          <option
            value="100 - 125 lbs"
          >
            100 - 125 lbs
          </option>
          <option
            value="125 - 150 lbs"
          >
            125 - 150 lbs
          </option>
          <option
            value="175 - 200 lbs"
          >
            175 - 200 lbs
          </option>
          <option
            value="200 - 225 lbs"
          >
            200 - 225 lbs
          </option>
          <option
            value="225 - 250 lbs"
          >
            225 - 250 lbs
          </option>
          <option
            value="250 - 275 lbs"
          >
            250 - 275 lbs
          </option>
          <option
            value="275 - 300 lbs"
          >
            275 - 300 lbs
          </option>
          <option
            value="300 - 325 lbs"
          >
            300 - 325 lbs
          </option>
          <option
            value="325 - 350 lbs"
          >
            325 - 350 lbs
          </option>
          <option
            value="350 - 375 lbs"
          >
            350 - 375 lbs
          </option>
          <option
            value="375 - 400 lbs"
          >
            375 - 400 lbs
          </option>
          <option
            value="More than 400 lbs"
          >
            More than 400 lbs
          </option>
        </select>
      </div>
      <div
        className="sc-dPaNSN edomnw"
      >
        <label
          className="sc-iBzFoy fJZDPC"
        >
          Age
        </label>
        <select
          className="sc-carGAA cPNaEG"
          name="weight"
        >
          <option
            disabled={true}
            hidden={true}
            selected={true}
          >
            Select
          </option>
          <option
            value="Under 18"
          >
            Under 18
          </option>
          <option
            value="18 to 24"
          >
            18 to 24
          </option>
          <option
            value="25 to 34"
          >
            25 to 34
          </option>
          <option
            value="35 to 44"
          >
            35 to 44
          </option>
          <option
            value="45 to 54"
          >
            45 to 54
          </option>
          <option
            value="55 to 64"
          >
            55 to 64
          </option>
          <option
            value="65 to 74"
          >
            65 to 74
          </option>
          <option
            value="75 or over"
          >
            75 or over
          </option>
        </select>
      </div>
      <div
        className="sc-cOigif dvysjF"
      >
        <h3
          className="sc-efHXLn kBakUh"
        >
          Nickname*
        </h3>
        <input
          className="sc-jcwofb jnSqCA"
          name="nickname"
          placeholder="Example: jackie27"
          type="text"
        />
      </div>
      <div
        className="sc-cOigif dvysjF"
      >
        <h3
          className="sc-efHXLn kBakUh"
        >
          Location
        </h3>
        <input
          className="sc-jcwofb jnSqCA"
          name="Location"
          placeholder="Example: Seattle, WA"
          type="text"
        />
      </div>
      <div
        className="sc-cOigif dvysjF"
      >
        <h3
          className="sc-efHXLn kBakUh"
        >
          Email*
        </h3>
        <input
          className="sc-jcwofb jnSqCA"
          name="email"
          placeholder="Example: youremail@example.com"
          type="email"
        />
      </div>
      <div
        className="sc-dPaNSN edomnw"
      >
        <button
          className="sc-jgPznn bJMsQB"
        >
          Post Review
        </button>
      </div>
    </form>
  </div>
</div>
`;

exports[`A suite of tests for Reviews Services Container renders Reviews Services correctly 1`] = `
<section
  className="sc-gSYCTC ihcRdj"
>
  <hr />
  <div
    className="sc-bdnylx eTIvCG"
  />
  <button
    className="sc-iNiQeE kVAQmW"
    onClick={[Function]}
  >
    Be the first to review this product
  </button>
</section>
`;

exports[`A suite of tests for SortBy Component renders correctly SortBy Review Component by "Highest to Lowest Rating" 1`] = `
<div
  className="sc-fnVYJo iUPTYC"
  data-testid="dropDown"
>
  Sort By:
   
  Highest to Lowest Rating
   
  ▼
  <div
    className="sc-hBMVcZ cGajHf"
    data-testid="content"
  >
    <div
      className="sc-fFSRdu fmPRGV"
      data-testid="relevant"
      onClick={[Function]}
    >
      Most Relevant
    </div>
    <div
      className="sc-fFSRdu fmPRGV"
      data-testid="helpful"
      onClick={[Function]}
    >
      Most Helpful
    </div>
    <div
      className="sc-fFSRdu fmPRGV"
      data-testid="high"
      onClick={[Function]}
    >
      Highest to Lowest Rating
    </div>
    <div
      className="sc-fFSRdu fmPRGV"
      data-testid="low"
      onClick={[Function]}
    >
      Lowest to Highest Rating
    </div>
    <div
      className="sc-fFSRdu fmPRGV"
      data-testid="recent"
      onClick={[Function]}
    >
      Most Recent
    </div>
  </div>
</div>
`;

exports[`A suite of tests for SortBy Component renders correctly SortBy Review Component by "Highest to Lowest Rating" 2`] = `
<div
  className="sc-fnVYJo iUPTYC"
  data-testid="dropDown"
>
  Sort By:
   
  Lowesest to Highest Rating
   
  ▼
  <div
    className="sc-hBMVcZ cGajHf"
    data-testid="content"
  >
    <div
      className="sc-fFSRdu fmPRGV"
      data-testid="relevant"
      onClick={[Function]}
    >
      Most Relevant
    </div>
    <div
      className="sc-fFSRdu fmPRGV"
      data-testid="helpful"
      onClick={[Function]}
    >
      Most Helpful
    </div>
    <div
      className="sc-fFSRdu fmPRGV"
      data-testid="high"
      onClick={[Function]}
    >
      Highest to Lowest Rating
    </div>
    <div
      className="sc-fFSRdu fmPRGV"
      data-testid="low"
      onClick={[Function]}
    >
      Lowest to Highest Rating
    </div>
    <div
      className="sc-fFSRdu fmPRGV"
      data-testid="recent"
      onClick={[Function]}
    >
      Most Recent
    </div>
  </div>
</div>
`;

exports[`A suite of tests for SortBy Component renders correctly SortBy Review Component by "Most Helpful" 1`] = `
<div
  className="sc-fnVYJo iUPTYC"
  data-testid="dropDown"
>
  Sort By:
   
  Most Helpful
   
  ▼
  <div
    className="sc-hBMVcZ cGajHf"
    data-testid="content"
  >
    <div
      className="sc-fFSRdu fmPRGV"
      data-testid="relevant"
      onClick={[Function]}
    >
      Most Relevant
    </div>
    <div
      className="sc-fFSRdu fmPRGV"
      data-testid="helpful"
      onClick={[Function]}
    >
      Most Helpful
    </div>
    <div
      className="sc-fFSRdu fmPRGV"
      data-testid="high"
      onClick={[Function]}
    >
      Highest to Lowest Rating
    </div>
    <div
      className="sc-fFSRdu fmPRGV"
      data-testid="low"
      onClick={[Function]}
    >
      Lowest to Highest Rating
    </div>
    <div
      className="sc-fFSRdu fmPRGV"
      data-testid="recent"
      onClick={[Function]}
    >
      Most Recent
    </div>
  </div>
</div>
`;

exports[`A suite of tests for SortBy Component renders correctly SortBy Review Component by "Most Recent" 1`] = `
<div
  className="sc-fnVYJo iUPTYC"
  data-testid="dropDown"
>
  Sort By:
   
  Most Recent
   
  ▼
  <div
    className="sc-hBMVcZ cGajHf"
    data-testid="content"
  >
    <div
      className="sc-fFSRdu fmPRGV"
      data-testid="relevant"
      onClick={[Function]}
    >
      Most Relevant
    </div>
    <div
      className="sc-fFSRdu fmPRGV"
      data-testid="helpful"
      onClick={[Function]}
    >
      Most Helpful
    </div>
    <div
      className="sc-fFSRdu fmPRGV"
      data-testid="high"
      onClick={[Function]}
    >
      Highest to Lowest Rating
    </div>
    <div
      className="sc-fFSRdu fmPRGV"
      data-testid="low"
      onClick={[Function]}
    >
      Lowest to Highest Rating
    </div>
    <div
      className="sc-fFSRdu fmPRGV"
      data-testid="recent"
      onClick={[Function]}
    >
      Most Recent
    </div>
  </div>
</div>
`;

exports[`A suite of tests for Star Review Component renders correctly Star Review Component with 1 ★'s 1`] = `
<div
  className="sc-bdnylx blTEpM"
/>
`;

exports[`A suite of tests for Star Review Component renders correctly Star Review Component with 3 ★'s 1`] = `
<div
  className="sc-bdnylx cSglpA"
/>
`;

exports[`A suite of tests for Star Review Component renders correctly Star Review Component with 4.5 ★'s 1`] = `
<div
  className="sc-bdnylx dDgCkX"
/>
`;

exports[`A suite of tests for Star Review Component renders correctly Star Review Component with 5 ★'s 1`] = `
<div
  className="sc-bdnylx gulRub"
/>
`;

exports[`A suite of tests for Star Review Component renders correctly Star Review Component with no ★'s 1`] = `
<div
  className="sc-bdnylx eTIvCG"
/>
`;
